pure ripple css

--- a/index.html
+++ b/index.html
@@ -89,80 +89,81 @@
 
   <main class="mdc-top-app-bar--fixed-adjust scroll">
 
-
-    <div class="mdc-card raid-list list-me material-ripple">
-      <div class="raid-name-container">
-        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
-        <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
+    <div id="raid-1" class="raid-container unfold">
+      <div class="mdc-card raid-list list-me ripple">
+        <div class="raid-name-container">
+          <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
+          <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
+        </div>
+        <div class="raind-list-info">
+          <span class="text-color-highlight m2-s-e">LiereaG</span>
+          <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
+          <!-- <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">navigate_next</i> -->
+        </div>
       </div>
-      <div class="raind-list-info">
-        <span class="text-color-highlight m2-s-e">LiereaG</span>
-        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
-        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">navigate_next</i>
+  
+      <div class="raid-member-container">
+        <div class="raid-member-list">
+  
+  
+          <div class="raid-member-simple me">
+            <div>
+              <span class="big user-name">레아</span>
+              <span class="char-name">(LiereaG)</span>
+            </div>
+            <div class="char-badge-container">
+              <span class="badge ilv">1540</span><span class="badge job heal">도화가❤</span>
+            </div>
+          </div>
+          <div class="raid-member-simple">
+            <div>
+              <span class="big user-name">드니프</span>
+              <span class="char-name">(Dneiff)</span>
+            </div>
+            <div class="char-badge-container">
+              <span class="badge ilv">1540</span><span class="badge job">디트</span>
+            </div>
+          </div>
+          <div class="raid-member-simple">
+            <div>
+              <span class="big user-name">엘시아</span>
+              <span class="char-name">(EccentricS)</span>
+            </div>
+            <div class="char-badge-container">
+              <span class="badge ilv">1540</span><span class="badge job">디트</span>
+            </div>
+          </div>
+          <div class="raid-member-simple">
+            <div>
+              <span class="big user-name">드니프</span>
+              <span class="char-name">(Dneiff)</span>
+            </div>
+            <div class="char-badge-container">
+              <span class="badge ilv">1540</span><span class="badge job">디트</span>
+            </div>
+          </div>
+          <div class="raid-member-simple">
+            <div>
+              <span class="big user-name">드니프</span>
+              <span class="char-name">(Dneiff)</span>
+            </div>
+            <div class="char-badge-container">
+              <span class="badge ilv">1540</span><span class="badge job">디트</span>
+            </div>
+          </div>
+  
+          <div class="complete-button-container">
+            <button class="mdc-button mdc-button--raised mdc-button--dense mdc-button--primary">완료</button>
+          </div>
+  
+  
+        </div>
+  
       </div>
     </div>
 
-    <div class="raid-member-container ripple animate unfold">
-      <div class="raid-member-list">
 
-
-        <div class="raid-member-simple me">
-          <div>
-            <span class="big user-name">레아</span>
-            <span class="char-name">(LiereaG)</span>
-          </div>
-          <div class="char-badge-container">
-            <span class="badge ilv">1540</span><span class="badge job heal">도화가❤</span>
-          </div>
-        </div>
-        <div class="raid-member-simple">
-          <div>
-            <span class="big user-name">드니프</span>
-            <span class="char-name">(Dneiff)</span>
-          </div>
-          <div class="char-badge-container">
-            <span class="badge ilv">1540</span><span class="badge job">디트</span>
-          </div>
-        </div>
-        <div class="raid-member-simple">
-          <div>
-            <span class="big user-name">엘시아</span>
-            <span class="char-name">(EccentricS)</span>
-          </div>
-          <div class="char-badge-container">
-            <span class="badge ilv">1540</span><span class="badge job">디트</span>
-          </div>
-        </div>
-        <div class="raid-member-simple">
-          <div>
-            <span class="big user-name">드니프</span>
-            <span class="char-name">(Dneiff)</span>
-          </div>
-          <div class="char-badge-container">
-            <span class="badge ilv">1540</span><span class="badge job">디트</span>
-          </div>
-        </div>
-        <div class="raid-member-simple">
-          <div>
-            <span class="big user-name">드니프</span>
-            <span class="char-name">(Dneiff)</span>
-          </div>
-          <div class="char-badge-container">
-            <span class="badge ilv">1540</span><span class="badge job">디트</span>
-          </div>
-        </div>
-
-        <div class="complete-button-container">
-          <button class="mdc-button mdc-button--raised mdc-button--dense mdc-button--primary">완료</button>
-        </div>
-
-
-      </div>
-
-    </div>
-
-
-    <div class="mdc-card raid-list list-me-not">
+    <div class="mdc-card raid-list list-me-not ripple">
       <div class="raid-name-container">
         <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_down</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
