--- a/index.html
+++ b/index.html
@@ -419,6 +419,6 @@
 
 
 <script src="/js/material-components-web.min.js"></script>
-<script src="render.js"></script>
+<script src="/render.js"></script>
 <script src="/js/index.js"></script>
 </html>
