--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 <script src="latBaHol.js"></script>
 
 
-<script src="/js/material-components-web.min.js"></script>
-<script src="/render.js"></script>
-<script src="/js/index.js"></script>
+<script src="./js/material-components-web.min.js"></script>
+<script src="./render.js"></script>
+<script src="./js/index.js"></script>
 </html>
