--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ko-KR">
 
 <head>
-  <base href="https://dneifiend.github.io/LatBaHol/">
-  <!-- <base href="https://127.0.0.1:8080/"> -->
+  <!-- <base href="https://dneifiend.github.io/LatBaHol/"> -->
+  <base href="https://127.0.0.1:8080/">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
