레이드 완료 추가

--- a/index.html
+++ b/index.html
@@ -100,13 +100,16 @@
 
     <main class="mdc-top-app-bar--fixed-adjust scroll">
 
+      
+
       <div id="raid-1" class="raid-container unfold">
-        <div class="mdc-card raid-list list-me ripple">
+        <div class="mdc-card raid-list list me ripple">
           <div class="raid-name-container">
-            <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
+            <i class="material-icons mdc-button__icon text-white-2 arrow-up" aria-hidden="true">keyboard_arrow_up</i>
+            <i class="material-icons mdc-button__icon text-white-2 arrow-down" aria-hidden="true">keyboard_arrow_down</i>
             <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
           </div>
-          <div class="raind-list-info">
+          <div class="raid-list-info">
             <span class="text-color-highlight m2-s-e">LiereaG</span>
             <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span
               class="text-white-2">×7</span>
@@ -172,7 +175,7 @@
       </div>
 
 
-      <div class="mdc-card raid-list list-me-not ripple">
+      <div class="mdc-card raid-list list ripple">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_down</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -184,7 +187,7 @@
         </div>
       </div>
 
-      <div class="mdc-card raid-list list-me">
+      <div class="mdc-card raid-list list me">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -196,7 +199,7 @@
         </div>
       </div>
 
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -208,7 +211,7 @@
         </div>
       </div>
 
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -220,7 +223,7 @@
         </div>
       </div>
 
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -231,7 +234,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -242,7 +245,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -253,7 +256,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -264,7 +267,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -275,7 +278,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -286,7 +289,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -297,7 +300,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -308,7 +311,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -319,7 +322,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -330,7 +333,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -341,7 +344,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -352,7 +355,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -363,7 +366,7 @@
             class="text-white-2">×7</span>
         </div>
       </div>
-      <div class="mdc-card raid-list list-me-not complete">
+      <div class="mdc-card raid-list list complete">
         <div class="raid-name-container">
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
           <span class="raid-name">쿠크 마지막</span><span class="raid-time text-white-2">(목 22)</span>
