--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ko-KR">
 
 <head>
-  <base href="https://dneifiend.github.io/LatBaHol/">
-  <!-- <base href="https://127.0.0.1:8080/"> -->
+  <!-- <base href="https://dneifiend.github.io/LatBaHol/"> -->
+  <base href="https://127.0.0.1:8080/">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -98,11 +98,11 @@
     </section>
 
 
-    <main class="mdc-top-app-bar--fixed-adjust scroll">
+    <main class="mdc-top-app-bar--fixed-adjust scroll loading">
 
       
 
-      <div id="raid-1" class="raid-container unfold">
+      <!-- <div id="raid-1" class="raid-container unfold">
         <div class="mdc-card raid-list list me ripple">
           <div class="raid-name-container">
             <i class="material-icons mdc-button__icon text-white-2 arrow-up" aria-hidden="true">keyboard_arrow_up</i>
@@ -376,7 +376,7 @@
           <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span
             class="text-white-2">×7</span>
         </div>
-      </div>
+      </div> -->
 
 
     </main>
