raid card css animation

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
 
 
-  <div id="modal" style="visibility: hidden;" onclick="settingHandler.close(this,event)">
+  <div id="modal" class="hidden" onclick="settingHandler.close(this,event)">
     <div class="modal-pop">
       
       <label class="mdc-text-field mdc-text-field--filled mdc-text-field--with-leading-icon">
