--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         <span class="mdc-text-field__ripple"></span>
         <span class="mdc-floating-label" id="user-name">닉네임</span>
         <i class="material-icons mdc-text-field__icon mdc-text-field__icon--leading" tabindex="0" role="button">face</i>
-        <input class="mdc-text-field__input" type="text" aria-labelledby="user-name" id="user-name-text-input">
+        <input class="mdc-text-field__input" type="text" aria-labelledby="user-name" id="user-name-text-input" spellcheck="false">
         <span class="mdc-line-ripple"></span>
       </label>
       <br>
